align songs with song nav but duartion is showing undefined fix it

--- a/src/Components/CSS/Body.css
+++ b/src/Components/CSS/Body.css
@@ -6,6 +6,7 @@
     background: linear-gradient(rgb(91, 87, 115), rgba(0, 0, 0, 1));
     height: 100%;
     width: 100vw;
+    /* height: 100vh; */
 }
 
 .body_content {
@@ -23,5 +24,9 @@
 }
 
 .songs {
-    flex: 0.6;
+    flex: 0.5;
+}
+
+.Song_nav{
+flex:0.1;
 }
